# ai_pos_rust_background_service

./: Cargo.toml
.history/: .gitignore_20260214193401  .gitignore_20260214193421  BUILD_GUIDE_20260214165707.md  Cargo_20260212192233.toml  Cargo_20260212192319.toml  Cargo_20260212202629.toml  Cargo_20260212203421.toml  Cargo_20260214145933.toml  Cargo_20260214181423.toml  Cargo_20260214181921.toml  DEPLOYMENT_20260212192723.md  README_20260212192849.md  README_20260212205927.md  config_20260212192303.toml  config_20260212193939.toml  config_20260212202403.toml  config_20260212203421.toml  config_20260212203558.toml  config_20260214182632.toml  config_20260214182818.toml
.history/.github/instructions/: project_plan.instructions_20260212154423.md
.history/android/: build_20260214150840.gradle
.history/android/app/: build_20260214150840.gradle
.history/scripts/: install_windows_20260212210023.ps1  package_for_macos_20260214165707.sh  package_for_windows_20260214183126.ps1  package_for_windows_20260214183240.ps1  package_for_windows_20260214185818.ps1
.history/src/: android_20260214145935.rs  android_20260214170844.rs  lib_20260214165707.rs  main_20260212192541.rs  main_20260212192755.rs  main_20260212202441.rs  main_20260212204505.rs  main_20260212205147.rs  main_20260214165955.rs
.history/src/config/: mod_20260212192258.rs  mod_20260212203653.rs  mod_20260212205311.rs  (+1 more)
scripts/: help_build_android.ps1  install_linux.sh  install_macos.sh  package_for_linux.sh  package_for_windows.ps1
src/: lib.rs  main.rs
src/device_manager/: mod.rs
src/hardware/: mod.rs
(+49 files in other folders)
