[package]
name = "pos_hardware_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
tokio-tungstenite = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
config = "0.13"
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"
async-trait = "0.1"
tokio-serial = "5.4"
serialport = "4.8.1"
